--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ select{
 .customStyle input[type=submit], .customStyle input[type=button]{
     text-align: center;
     border-radius: 100px;
-    background: #4B99AD;
+    background: #086788;
     padding: 8px 15px 8px 15px;
     border: none;
     color: #fff;
