--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,7 @@ body {
 
 .hide {
   display: none;
+  z-index: -9999;
 }
 /*----------------------------------------------------------------------------*/
 
@@ -160,6 +161,7 @@ nav {
     padding: 20px;
     z-index: 9999;
     position: fixed;
+    top: 0;
     /* Ombra navbar */
     -webkit-box-shadow: 0px 0px 4px 1.5px rgba(71,71,71,1);
     -moz-box-shadow: 0px 0px 4px 1.5px rgba(71,71,71,1);
